# django-mqueue

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  tox.ini  travis_settings.py
.github/workflows/: static.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: api.rst
docs/livefeed/: livefeed.rst
docs/logs/: logs_handler.rst
docs/realtime/: configuration.rst  handlers.rst  index.rst  usage.rst
docs/settings/: event_classes.rst  event_extra_html.rst  event_icons.rst  general_settings.rst  graphical_settings.rst
docs/usage/: create_event.rst  hooks.rst  monitored_models.rst  registered_models.rst  retrieve_events.rst  watchers.rst
docsite/: components.d.ts  package.json  vite.config.ts
docsite/src/: App.vue  conf.ts  state.ts
mqueue/: __init__.py  admin.py  apps.py  chartflo.py  conf.py  forms.py  handlers.py  logging.py  mcpserver.py  models.py  resources.py  routers.py  schema.py  signals.py  tests.py  tracking.py  urls.py  utils.py  views.py  watchers.py
mqueue/chartflo/: __init__.py  __main__.py  conf.py  errors.py  event_class.py  home.py  pages.py  sparklines.py  tables.py  timeline.py  transform.py
mqueue/hooks/: __init__.py
mqueue/migrations/: 0001_initial.py  0002_alter_mevent_id.py  0002_auto_20170702_1105.py  0002_mevent_scope.py
mqueue/templatetags/: mq.py
mqueue/tests/: __init__.py  apps.py  base.py  create.py  graphql_api.py  managers.py  runtests.py  test_admin.py  test_apps.py  test_create.py  test_graphql_api.py  test_logging.py  test_managers.py  (+5 more)
(+54 files in other folders)
