[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[mypy]
plugins =
    mypy_django_plugin.main

[coverage:run]
include = mqueue/*
omit = mqueue/tests/*

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
omit =
    mqueue/tests/runtests.py
    mqueue/tests/__init__.py
    mqueue/tests/*
